# llm-drift-monitor

./: .env.example  .gitignore  Makefile  README.md  blog_post.md  llm-drift-monitor.md  mlflow.db  pyproject.toml  requirements.txt  run_monitor.py
.github/workflows/: ci.yml
data/: simulate_stream.py
docs/: adr-01-tool-split.md  blog_post.md  engineering.md  failures.md  product.md  setup.md  tradeoffs.md
monitor/: dashboard.py  drift.py  embeddings.py  logger.py  quality.py  trends.py
scripts/: alert_optimizer.py  dashboard_generator.py  slo_designer.py
tests/: test_drift.py  test_thresholds.py
